contact.yml: changed

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'jekyllserif@example.com'
+email: 'office@intersecurity-komposch.at'
 phone: '+43 660 77 44 522'
 contact_button_link: 'contact'
